diag(lambda): measure try_lambda_dispatch per phase, and re-characterise the WebFlux timeout
`WebFluxAutoConfigurationTests` was filed as a "recurring full-timeout HANG".
It is not a hang: a `--stack-sample-ms 500` run serviced 811 of 818 possible
sample requests (99.1%) across the whole 409s, cost is flat per test method
(top 12.5s against a typical 6.5s across ~70 methods), and all 70 tests pass
whenever the budget allows. What it is:

  HotSpot     12.14s / 12.14s / 12.15s  (70/70, three runs, stable under load)
  CratonVM    398.9s  JIT
  CratonVM    478.0s  --nojit

The JIT is worth 17% on a workload that is 70 Spring context startups. That
number is the finding — whatever the time goes to is not something compiling
Java bodies reaches. Inclusive sample buckets: beans/factory 57.5%,
core/annotation+core/type 50.7%, context/annotation 38.7%, and class loading
0.1% (the usual suspect, refuted).

Measured directly, with each arm on its own monomorphic call site and every arm
run in both orders: an empty lambda's SAM call costs 4169-4228 ns against 15-20
ns for the identical interface call on a named class, an anonymous class, or a
final class — 207x-226x, inside one process, so host load cannot produce it.
HotSpot shows 2-10 ns against 1-2 ns. A second probe splits dispatch from body
compilation: a 200-iteration body costs 413 ns named vs 1311 ns lambda, so the
overwhelming term is fixed per-call dispatch, not an uncompiled body.

`CRATONVM_DBG=lambda-prof` adds per-phase timing to `try_lambda_dispatch`
(lookup / prep / target / other, printed every 200k dispatches). It exists
because reading that function offers four plausible candidate terms and cannot
rank them, and because that function carries a long list of named correctness
regressions from previous changes to how it picks a target — the term has to be
measured before anything there is touched.